# KasOS

gpio_interaction/: CMakeLists.txt  README.md  blinding_led.ino  linking.sh
gpio_interaction/client/src/: gpio copy.c  gpio.c
gpio_interaction/einit/src/: init.yaml.in  trusted.psl
protocol/: CMakeLists.txt  Prot_raspb-arduino.ino  README.md  cross-build.sh
protocol/client/: CMakeLists.txt
protocol/client/src/: gpio.c
protocol/einit/: CMakeLists.txt
protocol/einit/src/: common.psl  security_arm.psl  trusted.psl
protocol/resources/edl/: Client.edl
